Refactor: Enhance Image Handling and Add Society Image Upload
This commit introduces enhancements to image handling, adds society image upload functionality, and refactors related activities.

**New Features**

-   **Society Image Upload:** Added new functionality to upload society images.
    -   Created `SocietyImageActivity` for handling society image uploads, including registration certificate, incorporation certificate, PAN card, and address proof.
    -   Implemented image selection from gallery or camera in `SocietyImageActivity`.
    -   Added a new layout file `activity_society_image.xml` for the Society Image screen.
    -   Added API call to `getImageCkyc` for society image upload.
    - Added `file_paths.xml` for file provider for camera functionality.
-  -  Added `ucrop` for image crop.
-  -   Added the logic to check the all images are selected.
+   - Added `ucrop` library for image crop.
+   - Added the logic to check if all images are selected.

-   **Customer Data Validation** :
-  - Added validation for mandatory field in `CustomerDataActivity`.
+**Enhancements**
+
+ -   **Customer Data Activity**
+     -   Added validation for mandatory fields in `CustomerDataActivity`.
+     - Added max length in `uid` and `mobile no`.
+     -   Changed the input type of `uid` and `mobile`.
+     -  Added to PlainRequestBody in `CustomerDataActivity`.
+ -    **Image Grid Adapter**
+      - Added image name in `ImageGridAdapter`.
+     - Added `item_image` layout file.
+ -    **IndivdualPhotoActivity**
+      -  Added camera functionality.
+      - Added API call to upload image.
+     - Added `toPlainRequestBody` function.
+     -  Added validation logic.
+ -    **RelatedPersonImageActivity**
+     -  Added camera functionality.
+    - Added API call to upload image.
+     - Added `toPlainRequestBody` function.
+     -  Added validation logic.
+ - **Retrofit**
+    -  Changed `getImageCkyc` and `updateDetails`  API parameter type `String` to `RequestBody`.
+ - **

--- a/app/src/main/res/layout/activity_customer_data.xml
+++ b/app/src/main/res/layout/activity_customer_data.xml
@@ -83,8 +83,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="UID"
+                    android:maxLength="12"
                     android:textColor="@color/black"
-                    android:inputType="text" />
+                    android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -99,8 +100,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Mobile No"
+                    android:maxLength="10"
                     android:textColor="@color/black"
-                    android:inputType="text" />
+                    android:inputType="phone" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -207,7 +209,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Pin Code"
                     android:textColor="@color/black"
-                    android:inputType="text" />
+                    android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
