--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,7 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:layout_margin="8dp">
+
+    <TextView
+        android:id="@+id/imageText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ImageName"
+        android:textSize="18dp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:paddingBottom="8dp" />
 
     <ImageView
         android:id="@+id/imageSlot"
@@ -11,4 +22,4 @@
         android:background="@android:color/darker_gray"
         android:contentDescription="Image Slot"
         android:src="@android:drawable/ic_menu_camera" />
-</FrameLayout>
+</LinearLayout>
