--- a/app/src/main/res/layout/activity_customer_data.xml
+++ b/app/src/main/res/layout/activity_customer_data.xml
@@ -73,16 +73,17 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/uid_layout"
                 android:layout_marginTop="@dimen/margin_10"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:hint="UID"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/uid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="UID"
                     android:maxLength="12"
                     android:textColor="@color/black"
                     android:inputType="number" />
