--- a/app/src/main/res/layout/activity_related_person_image.xml
+++ b/app/src/main/res/layout/activity_related_person_image.xml
@@ -30,6 +30,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/text_Related"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Related to person details"
